syntax = "proto3";
package pb_common;

enum ResultCode {
	Success = 0;             //操作成功
	Failed = 1;              //操作失败
}

message UserInfo {
	string userid = 1;
	string name = 2;
	int64 money = 3;
	int64 lasttimestamp = 4;
}

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}

message Skill {
	int32 entry = 1;
	int32 level = 2;
}

message Hero {
	int64 hero_id = 1;
	int32 entry = 2;
	int32 level = 3;
	int32 exp = 4;
	int32 attack = 5;
	int32 defense = 6;
	int32 speed = 7;
	int32 intelligence = 8;
	int32 free_point = 9;
	int32 cost = 10;
	int32 star_level = 11;
	bool wakeup_state = 12;
	bool lock_state = 13;
	repeated Skill skills = 14;
}